fix waybar style, change gaps between apps

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,7 @@
 }
 
 window#waybar {
-    background: rgba(26, 27, 38, 0.75);
+    background: #060709;
     color: #c0caf5;
     font-family:
         JetBrainsMono Nerd Font,
